# pybbhash

./: .bumpversion.cfg  .gitignore  BINARY_FORMAT.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  TODO.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
cpp-bbhash/: .gitignore  BooPHF.h  README.md  platform_time.h  run_cross_language_tests.py  test_min.cpp  verify_cpp_export.py
docs/: DEVELOPER.md  PUBLISHING.md
examples/: basic.py  binary_format.py  demo_binary_save.py  example.py  uint64_mapping.py
pybbhash/: __init__.py  __init__.pyi  bitvector.py  boophf.py  hashfunctors.py  py.typed
res/: test_data.csv
scripts/: build.py  commands.ps1  version.py
tests/: test_base.py  test_binary_format.py
tests/cross_language/: .gitignore  README.md  TEST_FLOW.md  export_py_binary.py  export_test_data.py  generate_test_keys.py  run_tests.py  test_compatibility.cpp  verify_cpp_export.py
tests/cross_language/cpp_headers/: bitvector.hpp  progress.hpp
tests/cross_language/docs/: ARCHITECTURE.md  HASH_FUNCTION_FIX.md  README.md  TESTING_PHILOSOPHY.md
